Fixes #545: Make suggest page usable on mobile (#693)

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -773,6 +773,11 @@ body.sticky-offset {
     padding: 25px;
     position: relative;
     padding-bottom: 45px;
+    @include mobile {
+        padding-top: 0;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 
     #submit-suggest-form {
         position: absolute;
@@ -782,6 +787,18 @@ body.sticky-offset {
 }
 
 .brutusin-form {
+    @include mobile {
+        line-height: 1.3;
+        table {
+            border-collapse: separate;
+            &:not(.array) {
+                border-spacing: 0 15px;
+            }
+            &.array {
+                border-spacing: 0 5px;
+            }
+        }
+    }
     table.object {
         width: 100%;
     }
@@ -805,16 +822,34 @@ body.sticky-offset {
 
     td {
         padding: 5px;
+        @include mobile {
+            padding-top: 0;
+            padding-bottom: 0;
+        }
         vertical-align: top;
 
         &.prop-name {
-            width: 300px;
+            @include desktop {
+                width: 300px;
+            }
         }
         td.prop-name {
             width: auto;
         }
         &.item-action {
             width: 35px;
+        }
+        &.prop-value,
+        &.prop-name {
+            @include mobile {
+                display: block;
+            }
+        }
+
+        .item-value {
+            table {
+                border-spacing: 0 0;
+            }
         }
     }
 
